Tell SystemD to capture stdout to journal
Currently all the sysctl changes are written to stdout rather stderr, so
we need to additionally instruct SystemD to capture stdout to journal as
the default behavior of SystemD is to ignore stdout.

While at it also set stdin to /dev/null. Probably not needed but
shouldn't hurt either.

--- a/sysctl-logger.service.in
+++ b/sysctl-logger.service.in
@@ -5,6 +5,9 @@ Before=systemd-sysctl.service
 
 [Service]
 ExecStart=${SBINDIR}/sysctl-logger
+StandardError=journal
+StandardOutput=journal
+StandardInput=null
 
 [Install]
 WantedBy=basic.target
