--- a/sysctl-logger.service.in
+++ b/sysctl-logger.service.in
@@ -8,6 +8,7 @@ ExecStart=${SBINDIR}/sysctl-logger
 StandardError=journal
 StandardOutput=journal
 StandardInput=null
+LimitMEMLOCK=infinity # Might not be necessary
 
 [Install]
 WantedBy=basic.target
