Ensure mount point needed by the sysctl-logger binary exists
Since sysctl-logger is ran at the sysinit phase during boot, let's
ensure that the mount point needed by the sysctl-logger exist to avoid
unintended failure.

--- a/sysctl-logger.service.in
+++ b/sysctl-logger.service.in
@@ -3,6 +3,7 @@ Description=sysctl monitoring with BPF
 DefaultDependencies=no
 Wants=systemd-sysctl.service
 Before=systemd-sysctl.service
+RequiresMountsFor=${SBINDIR}/sysctl-logger
 
 [Service]
 Type=exec
