Switch to exec service type, again
Michal Koutný pointed out[1] that the exec service type really should
capture at least the same sysctl changes, if not more. And testing the
exec service type again I no longer see that it's missing sysctl
changes. So stick to the exec service type.

1: https://sequencediagram.org/index.html#initialData=AoSQIgjAtAfAzgTzgYwC4BsD66D2BzPAUwCcAuXAkzAMx2IGsAKASgCgBDNASwDd3VCAAlCRWI6PCRoscLgFsADukKkA7sS4DiNOkzYA7HAME4eJQYhQZMsxctKD1moZelxWh46fOvrFImSCCsQ4yIRwcBaEqACuCh5GQt7EFlJ++AEOhAAehMhmLKy+WP4ksOKkAPKYAMIAMpUAogAajTWsACaEnKi8-ELiYuASxZg5eWoaWjoMhZ5JZimj48gOTsbF7vMmi6lWJRkkDgBCwABiglz6cKjs6Oj8XDj6rKxAA

--- a/sysctl-logger.service.in
+++ b/sysctl-logger.service.in
@@ -6,6 +6,7 @@ Before=systemd-sysctl.service
 RequiresMountsFor=${SBINDIR}/sysctl-logger
 
 [Service]
+Type=exec
 ExecStart=${SBINDIR}/sysctl-logger
 StandardError=journal
 StandardOutput=journal
