Fix "Failed to parse resource value" error in service file
Michael Trapp pointed out that systemd does not support inline comment,
which is that we're seeing the following error:

  systemd[1]: /etc/systemd/system/sysctl-logger.service:13: Failed to parse resource value, ignoring: infinity # Might not be necessary

More the comment one line above with more elaboration.

--- a/sysctl-logger.service.in
+++ b/sysctl-logger.service.in
@@ -11,7 +11,8 @@ ExecStart=${SBINDIR}/sysctl-logger
 StandardError=journal
 StandardOutput=journal
 StandardInput=null
-LimitMEMLOCK=infinity # Might not be necessary
+# Raising the memlock limit might not be necessary
+LimitMEMLOCK=infinity
 
 [Install]
 WantedBy=sysinit.target
